# -*- readme-debian -*-

Bugs fixed in 0.5.0:
====================
[configure]
* Fixed umfpack check when umfpack is not installed (CP)

New in 0.5.0:
=============
[lifefem]
* Added discontinuous finite element(discontinuous galerkin) (DADP)
* Sanitized/revamped the boundary conditions classes (CP)

[testsuite]
* Added test for 3D/0D coupling (AM)


Bugs fixed in 0.4.0:
====================
[all]
* Banished using directives from _all_ header files (CW, CP, VM)
* More C++ standard compliance (CP)
* Better g++-3.4 support however still insufficient (CP)

[configure]
* Fixed umfpack check and readded it to configure (CP)

[lifecore]
* Renamed LDebug to Debug for area debugging (CP)

[lifefilters]
* OpenDX filter got revamped (CW)

[testsuite]
* remove/centralize multiple copies of classes/files (CP)

New in 0.4.0:
=============
[configure]
* Added --with-petsc=<top level petsc directory> configure option (CP)
* Added support for automake 1.9 (CP)
* Added check for the boost libraries and their installation sanity (CP)

[lifecore]
* Added an implementation of the Singleton design pattern (CP)
* Added an implementation of the Factory design pattern (CP)
* Added policies for creation and lifetime of objects (CP)

[lifearray]
* Added helpers for the Fitzhugh-Nagumo solver (JFG)

[lifealg]
* Added support for petsc 2.2.0/2.2.1 (CW & CP)
* Added SolverAztec similar to SolverPETSC (CW)
* Added Aitken method to get optimal relaxation parameter (GF & SD)
* Added nonlinear Richardson solver (GF & SD)

[lifefem]
* Added helpers for the Fitzhugh-Nagumo solver (JFG)

[lifesolver]
* Got rid of NavierStokesHandler_miguel.hpp (CW)

[lifefilters]
* Added Ensight7 writer (99% MP & 1% CP)

[testsuite]
* Added test case for coupled mass transport solvers (MP)
* Added NS test case for boundary condition given as a vector (AM)
* Added test for singleton pattern : lifecore/test_singleton (CP)
* Added test for factory pattern : lifecore/test_factory (CP)


Bugs fixed in 0.3.0: