@@ -30,7 +30,7 @@ check_PROGRAMS 	= test_casts test_copy test_mark_to_bc test_getpot\
                   test_pairs test_pf test_prova test_rotate \
                   test_seq test_size test_typedefs test_using \
                   test_valarray test_vsize test_debug \
-                  test_singleton
+                  test_singleton test_factory
 
 
 
@@ -52,6 +52,7 @@ test_debug_SOURCES  = test_debug.cpp
 test_getpot_SOURCES	= test_getpot.cpp
 
 test_singleton_SOURCES	= test_singleton.cpp
+test_factory_SOURCES	= test_factory.cpp
 
 POTFILES			= mesh.pot mesh2.pot mesh3.pot
 
