@@ -7,9 +7,18 @@ Bugs fixed in 0.5.0:
 
 New in 0.5.0:
 =============
+[lifecore]
+* Added the Cloning Factory pattern (aka Abstract Factory)
+  implementation (CP)  
+
 [lifefem]
 * Added discontinuous finite element(discontinuous galerkin) (DADP)
 * Sanitized/revamped the boundary conditions classes (CP)
+  ** split BC classes into their own files 
+  ** improved documentation 
+  ** reduced code redundancy and code size
+  ** use clone factory for BCFunction
+  ** use boost::shared_ptr<> for better memory management
 
 [testsuite]
 * Added test for 3D/0D coupling (AM)
@@ -161,4 +170,4 @@ New in 0.1.0pre3:
 * fixed some bugs and miscompilation in a few places
 
 
- -- Christophe Prud'homme <prudhomm@debian.org>, Mon Oct 11 16:24:19 2004
+ -- Christophe Prud'homme <prudhomm@debian.org>, Wed Oct 13 12:18:05 2004
